; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/macio/extr_aoa.c_aoa_dma_delete.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/macio/extr_aoa.c_aoa_dma_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aoa_dma = type { i32, i32 }

@M_DEVBUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aoa_dma*)* @aoa_dma_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aoa_dma_delete(%struct.aoa_dma* %0) #0 {
  %2 = alloca %struct.aoa_dma*, align 8
  store %struct.aoa_dma* %0, %struct.aoa_dma** %2, align 8
  %3 = load %struct.aoa_dma*, %struct.aoa_dma** %2, align 8
  %4 = getelementptr inbounds %struct.aoa_dma, %struct.aoa_dma* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @bus_dma_tag_destroy(i32 %5)
  %7 = load %struct.aoa_dma*, %struct.aoa_dma** %2, align 8
  %8 = getelementptr inbounds %struct.aoa_dma, %struct.aoa_dma* %7, i32 0, i32 0
  %9 = call i32 @mtx_destroy(i32* %8)
  %10 = load %struct.aoa_dma*, %struct.aoa_dma** %2, align 8
  %11 = load i32, i32* @M_DEVBUF, align 4
  %12 = call i32 @free(%struct.aoa_dma* %10, i32 %11)
  ret void
}

declare dso_local i32 @bus_dma_tag_destroy(i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @free(%struct.aoa_dma*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
